Per-frame traking is broken #52851

Closed
opened 2017-09-20 16:01:46 +02:00 by Efim Petelin · 11 comments

System Information
Windows 7 x64 / Linux Mint Cinnamon 18.1 x64
nVidia GeForce GTX 760

Blender Version
Broken: 2.79 5bd8ac9 and several versions before
Worked: 2.69.0 r60995

When you try to track one frame forward/backward with gui-button or hotkey alt+right/left nothing happens and blender stops changing video frames while changing current frame.

  1. Switch to movie clip editor
  2. Load any movie clip
  3. Create tracker
  4. Press alt+left/right
**System Information** Windows 7 x64 / Linux Mint Cinnamon 18.1 x64 nVidia GeForce GTX 760 **Blender Version** Broken: 2.79 5bd8ac9 and several versions before Worked: 2.69.0 r60995 When you try to track one frame forward/backward with gui-button or hotkey alt+right/left nothing happens and blender stops changing video frames while changing current frame. 1. Switch to movie clip editor 2. Load any movie clip 3. Create tracker 4. Press alt+left/right
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @efimpetelin

Added subscriber: @efimpetelin

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Have you tried the latest Buildbot builds?
I had a similar bug that was fixed some time ago: https://developer.blender.org/T52479

Have you tried the latest Buildbot builds? I had a similar bug that was fixed some time ago: https://developer.blender.org/T52479
Author

In #52851#461394, @SteffenD wrote:
Have you tried the latest Buildbot builds?
I had a similar bug that was fixed some time ago: https://developer.blender.org/T52479

I tried v2.79.1 77dccbf just now - same thing, it doesn't track one frame in any direction.

> In #52851#461394, @SteffenD wrote: > Have you tried the latest Buildbot builds? > I had a similar bug that was fixed some time ago: https://developer.blender.org/T52479 I tried v2.79.1 77dccbf just now - same thing, it doesn't track one frame in any direction.

Added subscriber: @Sergey

Added subscriber: @Sergey

I can not reproduce the bug on Linux.

Try running blender with --factory-startup command line argument and try reproducing the bug again. If the bug still happens, attach .blend file and small image sequence or a small video used for tracking which demonstrates the issue.

I can not reproduce the bug on Linux. Try running blender with `--factory-startup` command line argument and try reproducing the bug again. If the bug still happens, attach .blend file and small image sequence or a small video used for tracking which demonstrates the issue.
Author

I accidentally found that there is one very important factor that I missed: sequence should start from any frame except 1st.
There is archive with simple sequence and two blend files: one starting from 1st frame, other from 28th frame. The latter one demonstrates this bug.

Bl_Track_Issue.zip

bl_tracking_issue.mp4

I accidentally found that there is one very important factor that I missed: sequence should start from any frame except 1st. There is archive with simple sequence and two blend files: one starting from 1st frame, other from 28th frame. The latter one demonstrates this bug. [Bl_Track_Issue.zip](https://archive.blender.org/developer/F845748/Bl_Track_Issue.zip) [bl_tracking_issue.mp4](https://archive.blender.org/developer/F845752/bl_tracking_issue.mp4)
Sergey Sharybin self-assigned this 2017-09-21 12:08:48 +02:00

In the middle of something else atm, will have a look later.

In the middle of something else atm, will have a look later.

This issue was referenced by d430c462a3

This issue was referenced by d430c462a3d288827a1e427ebe826150ed277bfe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52851
No description provided.