Fix T52851: Per-frame traking is broken when sequence doesn't start at frame 1